Главная страница и отели

--- a/index.html
+++ b/index.html
@@ -5,8 +5,101 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.svg" weidth="" height="" alt="Седона">
+        </a>
+        <ul>
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="gallery.html">Фото и видео</a></li>
+          <li><a href="map.html">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <main class="container">
+      <h1 class="visually-hidden">Седона</h1>
+      <img src="img/big-page.jpg">
+      <section class="features">
+        <b class="title">Седона — небольшой городок в Аризоне, <br>
+        заслуживающий большего!</b>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <ol class="features-list">
+          <li>
+            <h2>Настоящий городок</h2>
+            <span>-№1-</span>
+            <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            <ul>
+              <li>
+                <h3>Жилье</h3>
+                <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li>
+                <h3>Еда</h3>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li>
+                <h3>Сувениры</h3>
+                <p>Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h2>Там есть мост дьявола</h2>
+            <span>-№2-</span>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </li>
+          <li>
+            <h2>Небольшая площадь</h2>
+            <span>-№3-</span>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li>
+            <h2>Красивая дорога</h2>
+            <span>-№4-</span>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h2>Мало туристов</h2>
+            <span>-№5-</span>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+
+      <section>
+        <b class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</b>
+        <p>Укажите предполагаемые даты поездки,  и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="button">Поиск гостиницы в Седоне</a>
+      </section>
+
+      <section class="map">
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <!--Карта-->
+      </section>
+    </main>
+
+    <footer>
+      <span class="hashtag">#visitsedona</span>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
+          <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
+          <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <span class="copyright">Website by</span>
+        <a class="logo-html" href="htmlacademy.ru">htmlacademy</a>
+      </p>  
+    </footer>
+
+    <section class="modal modal-input">
+      <h2 class="visually-hidden">Найти гостиницы</h2>
+      <!--Форма-->
+    </section>
 
   </body>
 </html>
