Поменяла интерактивные части на спаны

--- a/hotels.html
+++ b/hotels.html
@@ -32,12 +32,13 @@
           <a href="#">по цене</a>
           <a href="#">по типу</a>
           <a href="#">по рейтингу</a>
+          <span class="response-sort"></span>
         </header>
         <ul class="response-main">
           <li>
             <img src="">
             <h2>Amara Resort &amp; Spa</h2>
-            <div class="rating-stars">****</div>
+            <span class="rating-stars">****</span>
             <p>Гостиница</p>
             <span>от 4000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
@@ -49,7 +50,7 @@
           <li>
             <img src="">
             <h2>Desert Quail Inn</h2>
-            <div class="rating-stars">***</div>
+            <span class="rating-stars">***</span>
             <p>Мотель</p>
             <span>от 3000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
@@ -61,7 +62,7 @@
           <li>
             <img src="">
             <h2>Villas at Poco Diablo</h2>
-            <div class="rating-stars">**</div>
+            <span class="rating-stars">**</span>
             <p>Апартаменты</p>
             <span>от 2000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
