--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section>
         <b class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</b>
         <p>Укажите предполагаемые даты поездки,  и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
-        <a href="#" class="button">Поиск гостиницы в Седоне</a>
+        <span><a href="#" class="button">Поиск гостиницы в Седоне</a></span>
       </section>
 
       <section class="map">
