--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class="main-header-logo" href="index.html">
-  				<img src="img/logo.svg" weidth="" height="" alt="Седона">
+  				<img src="img/logo.svg" width="" height="" alt="Седона">
   			</a>
   			<ul>
 	  			<li><a href="info.html">Информация</a></li>
@@ -32,7 +32,8 @@
           <a href="#">по цене</a>
           <a href="#">по типу</a>
           <a href="#">по рейтингу</a>
-          <span class="response-sort"></span>
+          <a href="#">по возрастанию</a>
+          <a href="#">по убыванию</a>
         </header>
         <ul class="response-main">
           <li>
@@ -43,9 +44,7 @@
             <span>от 4000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
             <a class="book" href="#">Забронировать</a>
-            <div class="rating">
-              <p>Рейтинг:</p>
-            </div>
+            <p>Рейтинг: 8,5</p>
           </li>
           <li>
             <img src="">
@@ -55,9 +54,7 @@
             <span>от 3000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
             <a class="book" href="#">Забронировать</a>
-            <div class="rating">
-              <p>Рейтинг:</p>
-            </div>
+            <p>Рейтинг: 8,9</p>
           </li>
           <li>
             <img src="">
@@ -67,9 +64,7 @@
             <span>от 2000 Р.</span>
             <a class="detailed" href="#">Подробнее</a>
             <a class="book" href="#">Забронировать</a>
-            <div class="rating">
-              <p>Рейтинг:</p>
-            </div>
+            <p>Рейтинг: 9,2</p>
           </li>
         </ul>
       </section>
@@ -77,16 +72,14 @@
 
   	<footer>
   		<span class="hashtag">#visitsedona</span>
-  		<div class="footer-social">
-  			<ul>
-  				<li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
-  				<li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
-  				<li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
-  			</ul>
-  		</div>
+			<ul class="footer-social">
+				<li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
+				<li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
+				<li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
+			</ul>
   		<p class="footer-copyright">
   			<span class="copyright">Website by</span>
-  			<a class="logo-html" href="htmlacademy.ru">htmlacademy</a>
+  			<a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
   		</p>	
   	</footer>
 
