--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" weidth="" height="" alt="Седона">
+        <a class="main-header-logo" href="#">
+          <img src="img/logo.svg" width="" height="" alt="Седона">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -23,8 +23,7 @@
       <h1 class="visually-hidden">Седона</h1>
       <img src="img/big-page.jpg">
       <section class="features">
-        <b class="title">Седона — небольшой городок в Аризоне, <br>
-        заслуживающий большего!</b>
+        <b class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ol class="features-list">
           <li>
@@ -72,27 +71,25 @@
       <section>
         <b class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</b>
         <p>Укажите предполагаемые даты поездки,  и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
-        <span><a href="#" class="button">Поиск гостиницы в Седоне</a></span>
+        <a href="hotels.html" class="button">Поиск гостиницы в Седоне</a>
       </section>
 
       <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <!--Карта-->
+        <a href="yandex.ru/maps"><img src=""></a>
       </section>
     </main>
 
     <footer>
       <span class="hashtag">#visitsedona</span>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
-          <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
-          <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
-        </ul>
-      </div>
+      <ul class="footer-social">
+        <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
+        <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
+        <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
+      </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="htmlacademy.ru">htmlacademy</a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
       </p>  
     </footer>
 
