Исправила span на p

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-      <span class="hashtag">#visitsedona</span>
+      <p class="hashtag">#visitsedona</p>
       <ul class="footer-social">
         <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
         <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
