Добавила на страницы контентные изображения

--- a/hotels.html
+++ b/hotels.html
@@ -32,12 +32,12 @@
           <a href="#">по цене</a>
           <a href="#">по типу</a>
           <a href="#">по рейтингу</a>
-          <a href="#">по возрастанию</a>
-          <a href="#">по убыванию</a>
+          <a href="#"><img src="img/icon-up-dir.svg"></a>
+          <a href="#"><img src="img/icon-down-dir.svg"></a>
         </header>
         <ul class="response-main">
           <li>
-            <img src="">
+            <img src="img/amara.jpg">
             <h2>Amara Resort &amp; Spa</h2>
             <span class="rating-stars">****</span>
             <p>Гостиница</p>
@@ -47,7 +47,7 @@
             <p>Рейтинг: 8,5</p>
           </li>
           <li>
-            <img src="">
+            <img src="img/desert.jpg">
             <h2>Desert Quail Inn</h2>
             <span class="rating-stars">***</span>
             <p>Мотель</p>
@@ -57,7 +57,7 @@
             <p>Рейтинг: 8,9</p>
           </li>
           <li>
-            <img src="">
+            <img src="img/villas.jpg">
             <h2>Villas at Poco Diablo</h2>
             <span class="rating-stars">**</span>
             <p>Апартаменты</p>
@@ -71,17 +71,17 @@
   	</main>
 
   	<footer>
-  		<p class="hashtag">#visitsedona</p>
-			<ul class="footer-social">
-				<li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
-				<li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
-				<li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
-			</ul>
-  		<p class="footer-copyright">
-  			<span class="copyright">Website by</span>
-  			<a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
-  		</p>	
-  	</footer>
+      <p class="hashtag">#visitsedona</p>
+      <ul class="footer-social">
+        <li><a class="social-btn" href="twitter.com/sedona"><img src="img/twitter.svg"></a></li>
+        <li><a class="social-btn" href="facebook.com/sedona"><img src="img/facebook.svg"></a></li>
+        <li><a class="social-btn" href="youtube.com/sedona"><img src="img/youtube.svg"></a></li>
+      </ul>
+      <p class="footer-copyright">
+        <span class="copyright">Website by</span>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg"></a>
+      </p>  
+    </footer>
 
   </body>
 </html>
