--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="#">
-          <img src="img/logo.svg" width="" height="" alt="Седона">
+          <img src="img/logo.png" width="" height="" alt="Седона">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -76,20 +76,20 @@
 
       <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a href="yandex.ru/maps"><img src=""></a>
+        <a href="yandex.ru/maps"><img src="img/map.png"></a>
       </section>
     </main>
 
     <footer>
       <p class="hashtag">#visitsedona</p>
       <ul class="footer-social">
-        <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
-        <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
-        <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
+        <li><a class="social-btn" href="twitter.com/sedona"><img src="img/twitter.svg"></a></li>
+        <li><a class="social-btn" href="facebook.com/sedona"><img src="img/facebook.svg"></a></li>
+        <li><a class="social-btn" href="youtube.com/sedona"><img src="img/youtube.svg"></a></li>
       </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg"></a>
       </p>  
     </footer>
 
