--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="#">
-          <img src="img/logo.png" width="" height="" alt="Седона">
+        <a class="main-header-logo">
+          <img src="img/logo.png" width="138px" height="70px" alt="Седона">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -21,7 +21,7 @@
 
     <main class="container">
       <h1 class="visually-hidden">Седона</h1>
-      <img src="img/big-page.jpg">
+      <img src="img/header.png" width="458px" height="352px" alt="Добро пожаловать!">
       <section class="features">
         <b class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -30,6 +30,7 @@
             <h2>Настоящий городок</h2>
             <span>-№1-</span>
             <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            <img src="img/feature-1.jpg" width="800px" height="401px" alt="Жизнь в Седоне">
             <ul>
               <li>
                 <h3>Жилье</h3>
@@ -46,6 +47,7 @@
             </ul>
           </li>
           <li>
+            <img src="img/feature-2.jpg" width="800px" height="400px" alt="Мост дьявола">
             <h2>Там есть мост дьявола</h2>
             <span>-№2-</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -76,20 +78,20 @@
 
       <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a href="yandex.ru/maps"><img src="img/map.png"></a>
+        <a href="yandex.ru/maps"><img src="img/map.png" width="1718px" height="748px" alt="Карта"></a>
       </section>
     </main>
 
     <footer>
       <p class="hashtag">#visitsedona</p>
       <ul class="footer-social">
-        <li><a class="social-btn" href="twitter.com/sedona"><img src="img/twitter.svg"></a></li>
-        <li><a class="social-btn" href="facebook.com/sedona"><img src="img/facebook.svg"></a></li>
-        <li><a class="social-btn" href="youtube.com/sedona"><img src="img/youtube.svg"></a></li>
+        <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
+        <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
+        <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
       </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg"></a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115px" height="41px" alt="htmlacademy"></a>
       </p>  
     </footer>
 
