--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class="main-header-logo" href="index.html">
-  				<img src="img/logo.svg" width="" height="" alt="Седона">
+  				<img src="img/logo.png" width="138px" height="70px" alt="Седона">
   			</a>
   			<ul>
 	  			<li><a href="info.html">Информация</a></li>
@@ -32,12 +32,12 @@
           <a href="#">по цене</a>
           <a href="#">по типу</a>
           <a href="#">по рейтингу</a>
-          <a href="#"><img src="img/icon-up-dir.svg"></a>
-          <a href="#"><img src="img/icon-down-dir.svg"></a>
+          <a href="#">по возрастанию</a>
+          <a href="#">по убыванию</a>
         </header>
         <ul class="response-main">
           <li>
-            <img src="img/amara.jpg">
+            <img src="img/amara.jpg" width="135px" height="90px" alt="Amara Resort & Spa">
             <h2>Amara Resort &amp; Spa</h2>
             <span class="rating-stars">****</span>
             <p>Гостиница</p>
@@ -47,7 +47,7 @@
             <p>Рейтинг: 8,5</p>
           </li>
           <li>
-            <img src="img/desert.jpg">
+            <img src="img/desert.jpg"  width="135px" height="90px" alt="Desert Quail Inn">
             <h2>Desert Quail Inn</h2>
             <span class="rating-stars">***</span>
             <p>Мотель</p>
@@ -57,7 +57,7 @@
             <p>Рейтинг: 8,9</p>
           </li>
           <li>
-            <img src="img/villas.jpg">
+            <img src="img/villas.jpg" width="135px" height="90px" alt="Villas at Poco Diablo">
             <h2>Villas at Poco Diablo</h2>
             <span class="rating-stars">**</span>
             <p>Апартаменты</p>
@@ -73,13 +73,13 @@
   	<footer>
       <p class="hashtag">#visitsedona</p>
       <ul class="footer-social">
-        <li><a class="social-btn" href="twitter.com/sedona"><img src="img/twitter.svg"></a></li>
-        <li><a class="social-btn" href="facebook.com/sedona"><img src="img/facebook.svg"></a></li>
-        <li><a class="social-btn" href="youtube.com/sedona"><img src="img/youtube.svg"></a></li>
+        <li><a class="social-btn" href="twitter.com/sedona">twitter</a></li>
+        <li><a class="social-btn" href="facebook.com/sedona">facebook</a></li>
+        <li><a class="social-btn" href="youtube.com/sedona">youtube</a></li>
       </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg"></a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115px" height="41px" alt="htmlacademy"></a>
       </p>  
     </footer>
 
