--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class="main-header-logo" href="index.html">
-  				<img src="img/logo.png" width="138px" height="70px" alt="Седона">
+  				<img src="img/logo.png" width="138" height="70" alt="Седона">
   			</a>
   			<ul>
 	  			<li><a href="info.html">Информация</a></li>
@@ -22,7 +22,7 @@
   	<main class="container">
       <h1 class="visually-hidden">Поиск отелей</h1>
       <section class="request">
-        <form class="hotels-searching-detailed">
+        <form class="hotels-searching-detailed" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="infrastructure">
             <legend>Инфраструктура:</legend>
             <input type="checkbox" id="pool" name="pool" checked>
@@ -42,11 +42,17 @@
             <label for="apartment">Апартаменты</label>
           </fieldset>
           <fieldset class="day-value-form">
-            <label for="day-value">Стоимость в сутки (Р):</label>
-            <output name="day-value-output"></output>
-            <input type="range" multiple name="day-value" id="day-value">
-            <input type="submit" name="searching-detailed" value="Показать">
+            <p>Стоимость в сутки (Р):</p>
+            <div class="day-value">
+              <label for="from-value">От</label>
+              <input type="text" name="from-value" id="from-value">
+              <label for="till-value">До</label>
+              <input type="text" name="till-value" id="till-value">
+            </div>
+            <div class="bar-off"></div>
+            <div class="bar-on"></div>
           </fieldset>
+          <input type="submit" name="searching-detailed" value="Показать">
         </form>
       </section>
       
@@ -62,7 +68,7 @@
         </header>
         <ul class="response-main">
           <li>
-            <img src="img/amara.jpg" width="135px" height="90px" alt="Amara Resort & Spa">
+            <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <h2>Amara Resort &amp; Spa</h2>
             <span class="rating-stars">****</span>
             <p>Гостиница</p>
@@ -72,7 +78,7 @@
             <p>Рейтинг: 8,5</p>
           </li>
           <li>
-            <img src="img/desert.jpg"  width="135px" height="90px" alt="Desert Quail Inn">
+            <img src="img/desert.jpg"  width="135" height="90" alt="Desert Quail Inn">
             <h2>Desert Quail Inn</h2>
             <span class="rating-stars">***</span>
             <p>Мотель</p>
@@ -82,7 +88,7 @@
             <p>Рейтинг: 8,9</p>
           </li>
           <li>
-            <img src="img/villas.jpg" width="135px" height="90px" alt="Villas at Poco Diablo">
+            <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
             <h2>Villas at Poco Diablo</h2>
             <span class="rating-stars">**</span>
             <p>Апартаменты</p>
@@ -104,7 +110,7 @@
       </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115px" height="41px" alt="htmlacademy"></a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115" height="41" alt="htmlacademy"></a>
       </p>  
     </footer>
 
