--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/logo.png" width="138px" height="70px" alt="Седона">
+          <img src="img/logo.png" width="138" height="70" alt="Седона">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -21,7 +21,7 @@
 
     <main class="container">
       <h1 class="visually-hidden">Седона</h1>
-      <img src="img/header.png" width="458px" height="352px" alt="Добро пожаловать!">
+      <img src="img/header.png" width="458" height="352" alt="Добро пожаловать!">
       <section class="features">
         <b class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -30,7 +30,7 @@
             <h2>Настоящий городок</h2>
             <span>-№1-</span>
             <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            <img src="img/feature-1.jpg" width="800px" height="401px" alt="Жизнь в Седоне">
+            <img src="img/feature-1.jpg" width="800" height="401" alt="Жизнь в Седоне">
             <ul>
               <li>
                 <h3>Жилье</h3>
@@ -47,7 +47,7 @@
             </ul>
           </li>
           <li>
-            <img src="img/feature-2.jpg" width="800px" height="400px" alt="Мост дьявола">
+            <img src="img/feature-2.jpg" width="800" height="400" alt="Мост дьявола">
             <h2>Там есть мост дьявола</h2>
             <span>-№2-</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -78,7 +78,7 @@
 
       <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a href="yandex.ru/maps"><img src="img/map.png" width="1718px" height="748px" alt="Карта"></a>
+        <a href="yandex.ru/maps"><img src="img/map.png" width="1718" height="748" alt="Карта"></a>
       </section>
     </main>
 
@@ -91,7 +91,7 @@
       </ul>
       <p class="footer-copyright">
         <span class="copyright">Website by</span>
-        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115px" height="41px" alt="htmlacademy"></a>
+        <a class="logo-html" href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo_html.svg" width="115" height="41" alt="htmlacademy"></a>
       </p>  
     </footer>
 
@@ -100,21 +100,21 @@
       <form class="hotels-searching-date" method="post" action="https://echo.htmlacademy.ru">
         <p>
           <label for="arrival-date">Дата въезда:</label>
-          <input type="date" name="arrival-date" id="arrival-date">
-          <img src="img/calendar.svg" width="20px" height="20px">
+          <input type="text" name="arrival-date" id="arrival-date">
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </p>
         <p>
           <label for="departure-date">Дата выезда:</label>
-          <input type="date" name="departure-date" id="departure-date">
-          <img src="img/calendar.svg" width="20px" height="20px">
+          <input type="text" name="departure-date" id="departure-date">
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </p>
         <p>
           <label for="adult-amount">Взрослые:</label>
-          <input type="number" name="adult-amount" id="adult-amount" min="0" step="1">
+          <input type="text" name="adult-amount" id="adult-amount">
         </p>
         <p>
           <label for="children-amount">Дети:</label>
-          <input type="number" name="children-amount" id="children-amount" min="0" step="1">
+          <input type="text" name="children-amount" id="children-amount">
         </p>
         <input type="submit" name="searching-date" value="Найти">
       </form>
