--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -10,7 +13,7 @@
         <a class="main-header-logo">
           <img src="img/logo.png" width="138" height="70" alt="Седона">
         </a>
-        <ul>
+        <ul class="main-points-of-menu">
           <li><a href="info.html">Информация</a></li>
           <li><a href="gallery.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
@@ -19,9 +22,11 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main class="main-container">
       <h1 class="visually-hidden">Седона</h1>
-      <img src="img/header.png" width="458" height="352" alt="Добро пожаловать!">
+      <div class="main-container-img">
+        <img src="img/header.png" width="458" height="352" alt="Добро пожаловать!">
+      </div>
       <section class="features">
         <b class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</b>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -31,7 +36,7 @@
             <span>-№1-</span>
             <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
             <img src="img/feature-1.jpg" width="800" height="401" alt="Жизнь в Седоне">
-            <ul>
+            <ul class="common">
               <li>
                 <h3>Жилье</h3>
                 <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -70,7 +75,7 @@
         </ol>
       </section>
 
-      <section>
+      <section class="interested-detailed">
         <b class="interested">ЗАИНТЕРЕСОВАЛИСЬ?</b>
         <p>Укажите предполагаемые даты поездки,  и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
         <a href="hotels.html" class="button">Поиск гостиницы в Седоне</a>
@@ -100,12 +105,12 @@
       <form class="hotels-searching-date" method="post" action="https://echo.htmlacademy.ru">
         <p>
           <label for="arrival-date">Дата въезда:</label>
-          <input type="text" name="arrival-date" id="arrival-date">
+          <input type="text" name="arrival-date" id="arrival-date" placeholder="24 АПРЕЛЯ 2017">
           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </p>
         <p>
           <label for="departure-date">Дата выезда:</label>
-          <input type="text" name="departure-date" id="departure-date">
+          <input type="text" name="departure-date" id="departure-date" placeholder="4 ИЮЛЯ 2017">
           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </p>
         <p>
@@ -116,7 +121,7 @@
           <label for="children-amount">Дети:</label>
           <input type="text" name="children-amount" id="children-amount">
         </p>
-        <input type="submit" name="searching-date" value="Найти">
+        <input class="search-button" type="submit" name="searching-date" value="Найти">
       </form>
     </section>
 
