Доделала глобальную разметку

--- a/hotels.html
+++ b/hotels.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="container">
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class="main-header-logo" href="index.html">
